--- a/source/static/sass/overrides.sass
+++ b/source/static/sass/overrides.sass
@@ -1,5 +1,3 @@
-@import "variables"
-
 .captcha
   padding: 0 !important
   margin: 0
@@ -75,7 +73,7 @@
 
 .profile
   .students
-    color: var(--primary3)
+    color: var(--text-hc)
     background-color: var(--primary0)
     border-radius: 5px
 
@@ -86,7 +84,7 @@
       border: solid 2px var(--primary1)
       background-color: var(--primary2)
       border-radius: 5px
-      color: var(--primary0) !important
+      color: var(--text-hc) !important
 
   .group
     display: block
